--- a/src/_includes/home.html
+++ b/src/_includes/home.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div style="margin-top: 30px;text-align: center;">
+<div style="margin-top: 30px;text-align: center;" class="prose lg:prose-xl">
     {{ content | safe }}
 </div>
 
