--- a/src/_includes/home.html
+++ b/src/_includes/home.html
@@ -2,8 +2,31 @@
 
 
 {% block content %}
-<div style="margin-top: 30px;text-align: center;" class="prose lg:prose-xl">
-    {{ content | safe }}
+<div class="hero min-h-screen bg-base-100">
+    <div class="hero-content flex-col lg:flex-row-reverse lg:max-w-4xl mx-y">
+        <img src="{{ '/image/logo.png' | url }}" class="max-w-xs hover-img" />
+        <div>
+            <h1 class="text-5xl font-bold">{{ title }}</h1>
+            <p class="py-6">{{ description }}</p>
+            <button class="btn btn-primary">Get Started</button>
+        </div>
+    </div>
+</div>
+
+<div class="bg-base-200 w-full p-3 lg:p-8">
+    <h3 class="mx-auto my-4 text-5xl uppercase font-black text-center">Features</h3>
+    {%- for feature in features -%}
+    <div
+        class="py-4 mx-auto lg:max-w-4xl gap-4 lg:flex justify-between lg:flex-row {% if loop.index % 2 == 0 %} lg:flex-row-reverse {% endif %}">
+        <div class="text-center my-auto w-full">
+            <h3 class="text-2xl font-extrabold my-2">{{ feature.title }} </h3>
+            <h3 class="text-lg font-semibold">{{ feature.description }}</h3>
+        </div>
+        <div class="max-w-xs mx-auto hover-img border-base-content border-8 rounded-xl mask">
+            <img src="{{ feature.image | url }}" class="" />
+        </div>
+    </div>
+    {%- endfor -%}
 </div>
 
 {% endblock %}
