--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -3,13 +3,21 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{ '/image/logo.png' | url }}"/>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ '/image/logo.png' | url }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="{{ '/style.css' | url }}">
+    <title>CapyKey</title>
 </head>
 
 <body>
+    <div class="navbar bg-base-100">
+        <div class="flex-1">
+            <a href="/" class="btn btn-ghost normal-case text-xl">
+                <img class="h-6 w-6" src="{{ '/image/logo.png' | url }}" alt="Logo" /> CapyKey
+            </a>
+        </div>
+    </div>
     <main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
 </body>
 
