--- a/src/_includes/styles/tailwind.css
+++ b/src/_includes/styles/tailwind.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
+
+.hover-img {
+    @apply transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110;
+}
 @tailwind utilities;
